NP-9328-course-access-checker, build gradle changes